# dive

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  main.yml  presubmit.yml
capture_service/: android_application.cc  android_application.h  constants.h  device_mgr.cc  device_mgr.h  dive_client_cli.cc
cli/: CMakeLists.txt  commands.cpp  format_output.cpp  format_output.h  fuzz_main.cpp
dive_core/: CMakeLists.txt  capture_data.cpp  capture_data.h  capture_event_info.cpp  capture_event_info.h  command_hierarchy.cpp  command_hierarchy.h  data_core.cpp  data_core.h  dive_annotation_processor.cpp  dive_annotation_processor.h  dive_capture_data.cpp  dive_capture_data.h  dive_command_hierarchy.cpp  dive_command_hierarchy.h  generatePm4Info_adreno.py  gfxr_capture_data.cpp  gfxr_capture_data.h  gfxr_vulkan_command_hierarchy.cpp  gfxr_vulkan_command_hierarchy.h  pm4_capture_data.cpp  pm4_capture_data.h  shader_disassembly.cpp  vulkan_command_hierarchy.cpp  vulkan_command_hierarchy.h
dive_core/common/: emulate_pm4.cpp  emulate_pm4.h
dive_gfxr/android/framework/util/: CMakeLists.txt
dive_gfxr/cmake/: AgilitySDK.cmake  CodeStyle.cmake  FindVulkanVersion.cmake
dive_gfxr/framework/decode/: CMakeLists.txt
dive_gfxr/framework/graphics/: CMakeLists.txt
dive_gfxr/framework/util/: CMakeLists.txt
dive_gfxr/tools/optimize/: CMakeLists.txt
gfxr_dump_resources/: CMakeLists.txt
gfxr_ext/: CMakeLists.txt  dive_annotation_processor.cpp  dive_annotation_processor.h
gfxr_ext/decode/: CMakeLists.txt  dive_annotation_processor.cpp  dive_annotation_processor.h  vulkan_dive_consumer_base.cpp  vulkan_dive_consumer_base.h
host_cli/: data_core_wrapper.cpp  data_core_wrapper.h
lrz_validator/: CMakeLists.txt  main.cpp
plugins/: CMakeLists.txt
plugins/perf_counter/: CMakeLists.txt  perf_counter_analyze_window.cpp  perf_counter_analyze_window.h
plugins/plugin_sample/: CMakeLists.txt
scripts/: deploy_mac_bundle.py
src/dive/common/: app_types.h  what_if_modification_types.h
src/dive/plugin/abi/: CMakeLists.txt  imain_window.h  itrace_dialog.h
src/dive/ui/: forward.h
trace_stats/: main.cpp
ui/: CMakeLists.txt  about_window.cpp  analyze_window.cpp  analyze_window.h  application_controller.cpp  application_controller.h  arg_list_filter_proxy_model.cpp  arg_list_filter_proxy_model.h  args_filter_proxy_model.cpp  args_filter_proxy_model.h  buffer_view.cpp  capture_worker.cpp  command_buffer_model.cpp  command_buffer_model.h  command_buffer_view.cpp  command_buffer_view.h  command_model.cpp  command_model.h  command_tab_view.cpp  command_tab_view.h  device_dialog.h  dive_analyze_window.cpp  dive_analyze_window.h  dive_application.cpp  dive_application.h  dive_tree_view.cpp  dive_tree_view.h  event_selection_model.cpp  event_state_view.cpp  events_filter_proxy_model.cpp  events_filter_proxy_model.h  filter_dialog.cpp  filter_dialog.h  gfxr_vulkan_command_arg_filter_proxy_model.cpp  gfxr_vulkan_command_arg_filter_proxy_model.h  gfxr_vulkan_command_arg_model.cpp  gfxr_vulkan_command_arg_model.h  gfxr_vulkan_command_arg_tab_view.cpp  gfxr_vulkan_command_arg_tab_view.h  gfxr_vulkan_command_arguments_filter_proxy_model.cpp  (+40 more)
